# singlestack

./: .gitignore  Cargo.toml  README.md  Trunk.toml  cargo-generate.toml  dev
.github/: funding.yaml
app/: Cargo.toml  index.html
app/src/: api.rs  db.rs  lib.rs  main.rs
app/src/routes/: home.rs  not_found.rs
common/: Cargo.toml
common/src/: lib.rs
csr/: Cargo.toml
csr/src/: main.rs
hydrate/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
server/src/db/: mod.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
