[workspace]
members = ["app", "csr", "hydrate", "server", "src-tauri"]
resolver = "2"

[workspace.dependencies]
axum = "0.8"
cfg-if = "1.0"
console_error_panic_hook = "0.1"
console_log = "1.0"
http = "1.3"
leptos = { version = "0.8", features = ["nightly"] }
leptos_axum = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8", features = ["nightly"] }
log = "0.4"
serde = "1.0"
serde_json = "1"
simple_logger = "5.0"
singlestage = { version = "0.4", features = ["nightly"] }
surrealdb = "2.3"
tauri = "2"
tauri-build = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
thiserror = "2.0"
tokio = "1"
tower = "0.5"
tower-http = "0.6"
wasm-bindgen = "=0.2.105"
wasm-bindgen-test = "0.3"
web-sys = "0.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

# Cargo Leptos Stuff

[[workspace.metadata.leptos]]
# Compilation Parameters
always-erase-components = false
# bin-cargo-args = ["--timings"]
# bin-cargo-command = "cross"
bin-default-features = false
bin-features = []
# bin-profile-dev = "debug"
# bin-profile-release = "release"
bin-target = "server"
# bin-target-triple = "x86_64-unknown-linux-gnu" # Env: LEPTOS_BIN_TARGET_TRIPLE
disable-erase-components = false
features = []
hash-file-name = "hash.txt"
hash-files = false
# lib-cargo-args = ["--timings"]
lib-default-features = false
lib-features = ["hydrate"]
# lib-profile-dev = "debug"
# lib-release-profile = "release"
wasm-opt-features = [
  "-Oz",
  "--enable-bulk-memory",
  "--enable-nontrapping-float-to-int",
]

# Site Parameters
assets-dir = "public"
bin-package = "server"
browserquery = "defaults"
disable-server-fn-hash = true
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
env = "DEV"
js-dir = "src"
js-minify = false
lib-package = "hydrate"
name = "{{ project-name }}"
output-name = "{{ project-name }}"
reload-port = 3001
server-fn-mod-path = false
server-fn-prefix = "/api"
site-addr = "127.0.0.1:3000"
site-pkg-dir = "pkg"
site-root = "target/site"
# style-file = "style/main.css"
# tailwind-config-file = "tailwind.config.js"
tailwind-input-file = "style/tailwind.css"
watch = true
watch-additional-files = ["app", "hydrate", "server"]
