[package]
name = "app"
authors = ["{{ authors }}"]
version = "0.1.0"
edition = "2024"

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

common = { path = "../common" }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
singlestage = { workspace = true, optional = true }
surrealdb = { workspace = true, optional = true }

[features]
csr = ["leptos/csr", "singlestage/csr"]
default = ["dep:singlestage"]
hydrate = ["leptos/hydrate", "singlestage/hydrate"]
ssr = [
  "dep:leptos_axum",
  "dep:surrealdb",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "singlestage/ssr",
]
