[package]
name = "app"
authors = ["{{ authors }}"]
version = "0.1.0"
edition = "2024"

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

common = { path = "../common" }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
singlestage = { workspace = true, optional = true }
surrealdb = { workspace = true, optional = true }

# csr
console_error_panic_hook = { workspace = true, optional = true }
console_log = { workspace = true, optional = true }
log = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-test = { workspace = true }
web-sys = { workspace = true, features = ["Document", "Window"] }

[features]
csr = [
  "dep:console_error_panic_hook",
  "dep:console_log",
  "dep:log",
  "leptos/csr",
  "singlestage/csr",
]
default = ["dep:singlestage"]
hydrate = ["leptos/hydrate", "singlestage/hydrate"]
ssr = [
  "dep:leptos_axum",
  "dep:surrealdb",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "singlestage/ssr",
]
