[package]
name = "csr"
authors = ["{{ authors }}"]
version = "0.1.0"
edition = "2024"

[dependencies]
app = { path = "../app", default-features = false, features = ["csr"] }
console_error_panic_hook.workspace = true
console_log.workspace = true
leptos = { workspace = true, features = ["csr", "nightly"] }
leptos_meta = { workspace = true }
leptos_router = { workspace = true, features = ["nightly"] }
log.workspace = true

[dev-dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-test.workspace = true
web-sys = { workspace = true, features = ["Document", "Window"] }
