[package]
name = "{{ project-name }}"
authors = ["{{ authors }}"]
description = "A Tauri App"
edition = "2024"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "{{ project-name }}_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tauri-plugin-log.workspace = true
tauri-plugin-opener.workspace = true
tauri.workspace = true
